# Q3COD4BSP

./: .gitignore  .pylintrc  Q3-to-CoD4-Map-Converter.pyproj  README.md  appveyor.yml  converter.py  pyproject.toml  q3cod4bsp.py  requirements.txt
.github/: FUNDING.yml
.github/workflows/: application.yml
assets/: gdt.template
converter/: __main__.py  main.py
src/: __main__.py
src/q3cod4bsp/: main.py
tests/: test_main.py
